plugins/kotlin/idea/tests/testData/multiplatform/duplicateActualsExplicit/bottom/bottom.kt
package foo

actual class <!LINE_MARKER("descr='Has expects in top module'")!>A<!>
